--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1024,11 +1024,6 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
-@media (min-width: 1024px) {
-  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
-}
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
 }
@@ -1179,4 +1174,66 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .nav-link:hover,
 .cid-s5dLX3UWVr .dropdown-item:hover {
   color: #767676 !important;
+}
+.cid-s5dMV5XvwR {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s5dMV5XvwR .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-s5dMV5XvwR .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-s5dMV5XvwR .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-s5dMV5XvwR .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-s5dMV5XvwR .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-s5dMV5XvwR .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-s5dMV5XvwR .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-s5dMV5XvwR .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-s5dMV5XvwR .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
