--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1178,68 +1178,6 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-s5dMV5XvwR {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-s5dMV5XvwR .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-s5dMV5XvwR .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-s5dMV5XvwR .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-s5dMV5XvwR .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-s5dMV5XvwR .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-s5dMV5XvwR .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-s5dMV5XvwR .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-s5dMV5XvwR .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-s5dMV5XvwR .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
 .cid-s5dLX3UWVr .navbar {
   background: #ffffff;
   transition: none;
@@ -1696,4 +1634,71 @@ section.lazy-placeholder:after {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
   background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-s5dZVW6ICQ {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-s5dZVW6ICQ .content {
+    text-align: center;
+  }
+  .cid-s5dZVW6ICQ .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s5dZVW6ICQ .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-s5dZVW6ICQ .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-s5dZVW6ICQ .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-s5dZVW6ICQ .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s5dZVW6ICQ .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s5dZVW6ICQ .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-s5dZVW6ICQ .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s5dZVW6ICQ .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s5dZVW6ICQ .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s5dZVW6ICQ .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s5dZVW6ICQ .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
 }
