create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -716,73 +716,6 @@ section.lazy-placeholder:after {
 .cid-qTkA127IK8 H1 {
   text-align: center;
 }
-.cid-qTkAaeaxX5 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
-}
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .content {
-    text-align: center;
-  }
-  .cid-qTkAaeaxX5 .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-qTkAaeaxX5 .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-qTkAaeaxX5 .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-qTkAaeaxX5 .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-qTkAaeaxX5 .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-qTkAaeaxX5 .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-qTkAaeaxX5 .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-qTkAaeaxX5 .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-qTkAaeaxX5 .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
 .cid-s5dLX3UWVr .navbar {
   background: #ffffff;
   transition: none;
@@ -1177,6 +1110,73 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .nav-link:hover,
 .cid-s5dLX3UWVr .dropdown-item:hover {
   color: #767676 !important;
+}
+.cid-s5el1mNRTx {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-s5el1mNRTx .content {
+    text-align: center;
+  }
+  .cid-s5el1mNRTx .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s5el1mNRTx .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-s5el1mNRTx .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-s5el1mNRTx .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-s5el1mNRTx .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s5el1mNRTx .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s5el1mNRTx .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-s5el1mNRTx .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s5el1mNRTx .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s5el1mNRTx .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s5el1mNRTx .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s5el1mNRTx .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
 }
 .cid-s5dLX3UWVr .navbar {
   background: #ffffff;
@@ -1635,43 +1635,43 @@ section.lazy-placeholder:after {
   transition: 0.2s background ease-in-out;
   background: linear-gradient(to left, #554346, #45505b) !important;
 }
-.cid-s5dZVW6ICQ {
+.cid-s5elbIMqJH {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5dZVW6ICQ .content {
+  .cid-s5elbIMqJH .content {
     text-align: center;
   }
-  .cid-s5dZVW6ICQ .content > div:not(:last-child) {
+  .cid-s5elbIMqJH .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5dZVW6ICQ .media-wrap {
+  .cid-s5elbIMqJH .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5dZVW6ICQ .media-wrap .mbr-iconfont-logo {
+.cid-s5elbIMqJH .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5dZVW6ICQ .media-wrap img {
+.cid-s5elbIMqJH .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5dZVW6ICQ .footer-lower .copyright {
+  .cid-s5elbIMqJH .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5dZVW6ICQ .footer-lower hr {
+.cid-s5elbIMqJH .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5dZVW6ICQ .footer-lower .social-list {
+.cid-s5elbIMqJH .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1680,24 +1680,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5dZVW6ICQ .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5elbIMqJH .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5dZVW6ICQ .footer-lower .social-list .soc-item {
+.cid-s5elbIMqJH .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5dZVW6ICQ .footer-lower .social-list a {
+.cid-s5elbIMqJH .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5dZVW6ICQ .footer-lower .social-list a:hover {
+.cid-s5elbIMqJH .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5dZVW6ICQ .footer-lower .social-list {
+  .cid-s5elbIMqJH .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
@@ -2173,43 +2173,43 @@ section.lazy-placeholder:after {
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
-.cid-s5ebCaZrml {
+.cid-s5el7rgN3M {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5ebCaZrml .content {
+  .cid-s5el7rgN3M .content {
     text-align: center;
   }
-  .cid-s5ebCaZrml .content > div:not(:last-child) {
+  .cid-s5el7rgN3M .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5ebCaZrml .media-wrap {
+  .cid-s5el7rgN3M .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5ebCaZrml .media-wrap .mbr-iconfont-logo {
+.cid-s5el7rgN3M .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5ebCaZrml .media-wrap img {
+.cid-s5el7rgN3M .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5ebCaZrml .footer-lower .copyright {
+  .cid-s5el7rgN3M .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5ebCaZrml .footer-lower hr {
+.cid-s5el7rgN3M .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5ebCaZrml .footer-lower .social-list {
+.cid-s5el7rgN3M .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2218,24 +2218,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5ebCaZrml .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5el7rgN3M .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5ebCaZrml .footer-lower .social-list .soc-item {
+.cid-s5el7rgN3M .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5ebCaZrml .footer-lower .social-list a {
+.cid-s5el7rgN3M .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5ebCaZrml .footer-lower .social-list a:hover {
+.cid-s5el7rgN3M .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5ebCaZrml .footer-lower .social-list {
+  .cid-s5el7rgN3M .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
