--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1178,6 +1178,29 @@ section.lazy-placeholder:after {
     -webkit-justify-content: center;
   }
 }
+.cid-s5enRQ2oiG {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-s5enRQ2oiG .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-s5enRQ2oiG .section-text {
+  padding: 2rem 0;
+}
+.cid-s5enRQ2oiG .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s5enRQ2oiG .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-s5dLX3UWVr .navbar {
   background: #ffffff;
   transition: none;
