create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1111,43 +1111,43 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-s5epsum6vH {
+.cid-s5ezBZITh1 {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5epsum6vH .content {
+  .cid-s5ezBZITh1 .content {
     text-align: center;
   }
-  .cid-s5epsum6vH .content > div:not(:last-child) {
+  .cid-s5ezBZITh1 .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5epsum6vH .media-wrap {
+  .cid-s5ezBZITh1 .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5epsum6vH .media-wrap .mbr-iconfont-logo {
+.cid-s5ezBZITh1 .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5epsum6vH .media-wrap img {
+.cid-s5ezBZITh1 .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5epsum6vH .footer-lower .copyright {
+  .cid-s5ezBZITh1 .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5epsum6vH .footer-lower hr {
+.cid-s5ezBZITh1 .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5epsum6vH .footer-lower .social-list {
+.cid-s5ezBZITh1 .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1156,24 +1156,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5epsum6vH .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5ezBZITh1 .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5epsum6vH .footer-lower .social-list .soc-item {
+.cid-s5ezBZITh1 .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5epsum6vH .footer-lower .social-list a {
+.cid-s5ezBZITh1 .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5epsum6vH .footer-lower .social-list a:hover {
+.cid-s5ezBZITh1 .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5epsum6vH .footer-lower .social-list {
+  .cid-s5ezBZITh1 .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
@@ -2196,43 +2196,43 @@ section.lazy-placeholder:after {
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
-.cid-s5epAtmXdQ {
+.cid-s5ezJsk2Sl {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5epAtmXdQ .content {
+  .cid-s5ezJsk2Sl .content {
     text-align: center;
   }
-  .cid-s5epAtmXdQ .content > div:not(:last-child) {
+  .cid-s5ezJsk2Sl .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5epAtmXdQ .media-wrap {
+  .cid-s5ezJsk2Sl .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5epAtmXdQ .media-wrap .mbr-iconfont-logo {
+.cid-s5ezJsk2Sl .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5epAtmXdQ .media-wrap img {
+.cid-s5ezJsk2Sl .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5epAtmXdQ .footer-lower .copyright {
+  .cid-s5ezJsk2Sl .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5epAtmXdQ .footer-lower hr {
+.cid-s5ezJsk2Sl .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5epAtmXdQ .footer-lower .social-list {
+.cid-s5ezJsk2Sl .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2241,24 +2241,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5epAtmXdQ .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5ezJsk2Sl .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5epAtmXdQ .footer-lower .social-list .soc-item {
+.cid-s5ezJsk2Sl .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5epAtmXdQ .footer-lower .social-list a {
+.cid-s5ezJsk2Sl .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5epAtmXdQ .footer-lower .social-list a:hover {
+.cid-s5ezJsk2Sl .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5epAtmXdQ .footer-lower .social-list {
+  .cid-s5ezJsk2Sl .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
@@ -2671,43 +2671,43 @@ section.lazy-placeholder:after {
 .cid-s5eiXVZGf1 div.b {
   padding-top: 2rem;
 }
-.cid-s5epwfcWZ3 {
+.cid-s5ezForCTX {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5epwfcWZ3 .content {
+  .cid-s5ezForCTX .content {
     text-align: center;
   }
-  .cid-s5epwfcWZ3 .content > div:not(:last-child) {
+  .cid-s5ezForCTX .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5epwfcWZ3 .media-wrap {
+  .cid-s5ezForCTX .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5epwfcWZ3 .media-wrap .mbr-iconfont-logo {
+.cid-s5ezForCTX .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5epwfcWZ3 .media-wrap img {
+.cid-s5ezForCTX .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5epwfcWZ3 .footer-lower .copyright {
+  .cid-s5ezForCTX .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5epwfcWZ3 .footer-lower hr {
+.cid-s5ezForCTX .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5epwfcWZ3 .footer-lower .social-list {
+.cid-s5ezForCTX .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2716,24 +2716,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5epwfcWZ3 .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5ezForCTX .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5epwfcWZ3 .footer-lower .social-list .soc-item {
+.cid-s5ezForCTX .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5epwfcWZ3 .footer-lower .social-list a {
+.cid-s5ezForCTX .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5epwfcWZ3 .footer-lower .social-list a:hover {
+.cid-s5ezForCTX .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5epwfcWZ3 .footer-lower .social-list {
+  .cid-s5ezForCTX .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
