--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2738,14 +2738,17 @@ section.lazy-placeholder:after {
     -webkit-justify-content: center;
   }
 }
-.cid-s5vp6CdAOX {
+.cid-s5vpM1soh9 {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-s5vp6CdAOX .mbr-text,
-.cid-s5vp6CdAOX blockquote {
+.cid-s5vpM1soh9 .mbr-text,
+.cid-s5vpM1soh9 blockquote {
   color: #767676;
+}
+.cid-s5vpM1soh9 .mbr-text {
+  color: #ffffff;
 }
 .cid-s5dLX3UWVr .navbar {
   background: #ffffff;
