create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1658,43 +1658,43 @@ section.lazy-placeholder:after {
   transition: 0.2s background ease-in-out;
   background: linear-gradient(to left, #554346, #45505b) !important;
 }
-.cid-s5elbIMqJH {
+.cid-s5vC4KAeSg {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5elbIMqJH .content {
+  .cid-s5vC4KAeSg .content {
     text-align: center;
   }
-  .cid-s5elbIMqJH .content > div:not(:last-child) {
+  .cid-s5vC4KAeSg .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5elbIMqJH .media-wrap {
+  .cid-s5vC4KAeSg .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5elbIMqJH .media-wrap .mbr-iconfont-logo {
+.cid-s5vC4KAeSg .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5elbIMqJH .media-wrap img {
+.cid-s5vC4KAeSg .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5elbIMqJH .footer-lower .copyright {
+  .cid-s5vC4KAeSg .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5elbIMqJH .footer-lower hr {
+.cid-s5vC4KAeSg .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5elbIMqJH .footer-lower .social-list {
+.cid-s5vC4KAeSg .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1703,24 +1703,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5elbIMqJH .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5vC4KAeSg .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5elbIMqJH .footer-lower .social-list .soc-item {
+.cid-s5vC4KAeSg .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5elbIMqJH .footer-lower .social-list a {
+.cid-s5vC4KAeSg .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5elbIMqJH .footer-lower .social-list a:hover {
+.cid-s5vC4KAeSg .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5elbIMqJH .footer-lower .social-list {
+  .cid-s5vC4KAeSg .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
@@ -2196,43 +2196,43 @@ section.lazy-placeholder:after {
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
-.cid-s5ezJsk2Sl {
+.cid-s5vBOavwSH {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5ezJsk2Sl .content {
+  .cid-s5vBOavwSH .content {
     text-align: center;
   }
-  .cid-s5ezJsk2Sl .content > div:not(:last-child) {
+  .cid-s5vBOavwSH .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5ezJsk2Sl .media-wrap {
+  .cid-s5vBOavwSH .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5ezJsk2Sl .media-wrap .mbr-iconfont-logo {
+.cid-s5vBOavwSH .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5ezJsk2Sl .media-wrap img {
+.cid-s5vBOavwSH .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5ezJsk2Sl .footer-lower .copyright {
+  .cid-s5vBOavwSH .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5ezJsk2Sl .footer-lower hr {
+.cid-s5vBOavwSH .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5ezJsk2Sl .footer-lower .social-list {
+.cid-s5vBOavwSH .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2241,24 +2241,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5ezJsk2Sl .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5vBOavwSH .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5ezJsk2Sl .footer-lower .social-list .soc-item {
+.cid-s5vBOavwSH .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5ezJsk2Sl .footer-lower .social-list a {
+.cid-s5vBOavwSH .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5ezJsk2Sl .footer-lower .social-list a:hover {
+.cid-s5vBOavwSH .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5ezJsk2Sl .footer-lower .social-list {
+  .cid-s5vBOavwSH .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
@@ -2671,43 +2671,43 @@ section.lazy-placeholder:after {
 .cid-s5eiXVZGf1 div.b {
   padding-top: 2rem;
 }
-.cid-s5ezForCTX {
+.cid-s5vBJ3Uy4z {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-s5ezForCTX .content {
+  .cid-s5vBJ3Uy4z .content {
     text-align: center;
   }
-  .cid-s5ezForCTX .content > div:not(:last-child) {
+  .cid-s5vBJ3Uy4z .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-s5ezForCTX .media-wrap {
+  .cid-s5vBJ3Uy4z .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s5ezForCTX .media-wrap .mbr-iconfont-logo {
+.cid-s5vBJ3Uy4z .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s5ezForCTX .media-wrap img {
+.cid-s5vBJ3Uy4z .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-s5ezForCTX .footer-lower .copyright {
+  .cid-s5vBJ3Uy4z .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s5ezForCTX .footer-lower hr {
+.cid-s5vBJ3Uy4z .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s5ezForCTX .footer-lower .social-list {
+.cid-s5vBJ3Uy4z .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2716,24 +2716,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-s5ezForCTX .footer-lower .social-list .mbr-iconfont-social {
+.cid-s5vBJ3Uy4z .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s5ezForCTX .footer-lower .social-list .soc-item {
+.cid-s5vBJ3Uy4z .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s5ezForCTX .footer-lower .social-list a {
+.cid-s5vBJ3Uy4z .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s5ezForCTX .footer-lower .social-list a:hover {
+.cid-s5vBJ3Uy4z .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s5ezForCTX .footer-lower .social-list {
+  .cid-s5vBJ3Uy4z .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
@@ -3142,6 +3142,73 @@ section.lazy-placeholder:after {
 .cid-s5vlGXv8lm blockquote {
   color: #767676;
 }
+.cid-s5vBBujEgq {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-s5vBBujEgq .content {
+    text-align: center;
+  }
+  .cid-s5vBBujEgq .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s5vBBujEgq .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-s5vBBujEgq .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-s5vBBujEgq .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-s5vBBujEgq .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s5vBBujEgq .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s5vBBujEgq .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-s5vBBujEgq .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s5vBBujEgq .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s5vBBujEgq .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s5vBBujEgq .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s5vBBujEgq .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
 .cid-s5vrmH8qq7 .navbar {
   background: #ffffff;
   transition: none;
@@ -3545,4 +3612,71 @@ section.lazy-placeholder:after {
 .cid-s5vrmHAVis .mbr-text,
 .cid-s5vrmHAVis blockquote {
   color: #767676;
+}
+.cid-s5vBFb1kBm {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-s5vBFb1kBm .content {
+    text-align: center;
+  }
+  .cid-s5vBFb1kBm .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s5vBFb1kBm .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-s5vBFb1kBm .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-s5vBFb1kBm .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-s5vBFb1kBm .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s5vBFb1kBm .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s5vBFb1kBm .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-s5vBFb1kBm .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s5vBFb1kBm .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s5vBFb1kBm .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s5vBFb1kBm .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s5vBFb1kBm .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
 }
