--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4622,6 +4622,27 @@ section.lazy-placeholder:after {
     -webkit-justify-content: center;
   }
 }
+.cid-s5R9vpRgio {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/dsc-292-2000x1333.jpg");
+}
+.cid-s5R9vpRgio .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-s5R9vpRgio .mbr-figure img {
+  height: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 991px) {
+  .cid-s5R9vpRgio .mbr-figure img {
+    width: 100% !important;
+  }
+}
 .cid-s5R0eLHUre .navbar {
   background: #ffffff;
   transition: none;
@@ -5018,7 +5039,7 @@ section.lazy-placeholder:after {
   color: #767676 !important;
 }
 .cid-s5R0eM2prl {
-  padding-top: 120px;
+  padding-top: 90px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
