--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4622,26 +4622,10 @@ section.lazy-placeholder:after {
     -webkit-justify-content: center;
   }
 }
-.cid-s5R9vpRgio {
+.cid-s5Rc3rlDwv {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/dsc-292-2000x1333.jpg");
-}
-.cid-s5R9vpRgio .mbr-figure {
-  margin: 0 auto;
-  width: 100%;
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-s5R9vpRgio .mbr-figure img {
-  height: 100%;
-  margin: 0 auto;
-}
-@media (max-width: 991px) {
-  .cid-s5R9vpRgio .mbr-figure img {
-    width: 100% !important;
-  }
+  background-image: url("../../../assets/images/dsc-624-2000x1333.jpg");
 }
 .cid-s5R0eLHUre .navbar {
   background: #ffffff;
