--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4622,9 +4622,7 @@ section.lazy-placeholder:after {
     -webkit-justify-content: center;
   }
 }
-.cid-s5Rc3rlDwv {
-  padding-top: 135px;
-  padding-bottom: 90px;
+.cid-s5RfqbDJVy {
   background-image: url("../../../assets/images/dsc-624-2000x1333.jpg");
 }
 .cid-s5R0eLHUre .navbar {
