--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2738,6 +2738,9 @@ section.lazy-placeholder:after {
     -webkit-justify-content: center;
   }
 }
+.cid-s5T3PCJ78Y {
+  background-image: url("../../../assets/images/komunia-2020-06-21-48-2000x1333.jpg");
+}
 .cid-s5dLX3UWVr .navbar {
   background: #ffffff;
   transition: none;
@@ -3134,7 +3137,7 @@ section.lazy-placeholder:after {
   color: #767676 !important;
 }
 .cid-s5vlGXv8lm {
-  padding-top: 120px;
+  padding-top: 90px;
   padding-bottom: 120px;
   background-color: #ffffff;
 }
