--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3664,8 +3664,17 @@ section.lazy-placeholder:after {
 .cid-s5vrmH8qq7 .dropdown-item:hover {
   color: #767676 !important;
 }
+.cid-scs7EmeVep {
+  background-image: url("../../../assets/images/anita-przemek-nowy-targ-529-2000x1333.jpeg");
+}
+.cid-scs7EmeVep H1 {
+  color: #ffffff;
+}
+.cid-scs7EmeVep H3 {
+  color: #ffffff;
+}
 .cid-s5vrmHAVis {
-  padding-top: 120px;
+  padding-top: 45px;
   padding-bottom: 120px;
   background-color: #ffffff;
 }
