--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10022,3 +10022,70 @@ section.lazy-placeholder:after {
 .cid-sfTz9Vj2lo a.img {
   pointer-events: none;
 }
+.cid-sfTFGiRbpr {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-sfTFGiRbpr .content {
+    text-align: center;
+  }
+  .cid-sfTFGiRbpr .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sfTFGiRbpr .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sfTFGiRbpr .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-sfTFGiRbpr .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-sfTFGiRbpr .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-sfTFGiRbpr .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-sfTFGiRbpr .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-sfTFGiRbpr .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-sfTFGiRbpr .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sfTFGiRbpr .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-sfTFGiRbpr .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sfTFGiRbpr .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
