--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -966,6 +966,10 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1066,6 +1070,10 @@ section.lazy-placeholder:after {
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-buttons {
